--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,17 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+*::-webkit-scrollbar {
+  background-color: transparent;
+  width: 15px;
+}
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  border: 4px solid transparent;
+  background-color: rgba(0,0,0,0.2);
+  background-clip: content-box;
+}
